src/k8s/bases/portainer/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: portainer.${NETWORK_HOSTNAME_SUFFIX}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: portainer-ui-svc
                port:
                  name: 9000-tcp
